# hitman-bin1

./: Cargo.toml  build.rs  custom.txt  h1-enums.txt  h1-types.txt  h1.txt  h2-enums.txt  h2-types.txt  h2.txt  h3-enums.txt  h3-types.txt  h3.txt  properties-crc32.txt  properties.txt
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  main.rs
src/de/: impls.rs  mod.rs
src/game/: conversion.rs  h1.rs  h2.rs  h3.rs  mod.rs  variant_impl.rs
src/ser/: impls.rs  mod.rs
src/types/: array.rs  mod.rs  pointers.rs  property.rs  repository.rs  resource.rs  string.rs  variant.rs
