[package]
name = "hitman-bin1"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
ecow = "0.2.6"
rand = "0.9.2"
thiserror = "2.0.14"
tryvial = "0.2.0"
hitman-bin1-derive = { path = "derive" }
hitman-commons = { git = "https://github.com/atampy25/hitman-commons", features = ["serde"] }
serde_json = "1.0.142"
serde = "1.0.219"
string-interner = "0.19.0"
