[package]
name = "hitman-bin1"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
ecow = { version = "0.2.6", features = ["serde"] }
rand = "0.9.2"
thiserror = "2.0.15"
tryvial = "0.2.0"
hitman-bin1-derive = { path = "derive" }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
string-interner = "0.19.0"
inventory = "0.3.20"
const_format = "0.2.34"
dynex = "0.1.1"
dynex_core = "0.1.1"
static_init = "1.0.4"

[build-dependencies]
anyhow = "1.0.99"
codegen = "0.2.0"
Inflector = "0.11.4"
lazy-regex = "3.4.1"
